force-app/main/default/objects/Exchange_Rate__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <inlineHelpText>Type of Currency from NetSuite</inlineHelpText>
    <label>Currency</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>