force-app/main/default/objects/Exchange_Rate__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>corresponds to the Effective Date from NetSuite&apos;s CurrencyRate object</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>