force-app/main/default/objects/Exchange_Rate__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <inlineHelpText>Exchange Rate Value from NetSuite which Opportunity Amount will be divided by</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>